# OLW

./: .coveragerc  .flake8  .gitignore  .style.yapf  OLW.code-workspace  pyproject.toml  pytest.ini  requirements.txt
coverage_report/: d_51bd63fe0475a84c_event_executer_py.html  d_51bd63fe0475a84c_topmost_switcher_py.html  d_51bd63fe0475a84c_window_closer_py.html  d_51bd63fe0475a84c_window_mover_py.html  d_54fac144176ba9c3_date_observer_py.html  d_54fac144176ba9c3_time_observer_py.html  d_54fac144176ba9c3_watch_observer_py.html  d_6f2831e0ae21b2fc_point_manipulator_py.html  d_6f2831e0ae21b2fc_point_py.html  d_6f2831e0ae21b2fc_size_py.html  d_94670feb7830d8a4_event_factory_py.html  d_a50afe37205b3749_time_counter_py.html  d_a50afe37205b3749_watch_counter_py.html  d_b1b1bcfd5de1c0c7_window_py.html  d_b974d8c5034583bf_event_connector_py.html  d_b974d8c5034583bf_topmost_switch_event_py.html  d_b974d8c5034583bf_window_close_event_py.html  index.html  status.json
doc/: EventFactorySequence.puml  WindowFactorySequence.puml  class.puml
docs/: d_51bd63fe0475a84c_event_executer_py.html  d_51bd63fe0475a84c_topmost_switcher_py.html  d_51bd63fe0475a84c_window_closer_py.html  d_51bd63fe0475a84c_window_mover_py.html  d_54fac144176ba9c3_date_observer_py.html  d_54fac144176ba9c3_time_observer_py.html  d_54fac144176ba9c3_watch_observer_py.html  d_6f2831e0ae21b2fc_point_manipulator_py.html  d_6f2831e0ae21b2fc_point_py.html  d_6f2831e0ae21b2fc_size_py.html  d_94670feb7830d8a4_event_factory_py.html  d_a50afe37205b3749_time_counter_py.html  d_a50afe37205b3749_watch_counter_py.html  (+6 more)
(+31 files in other folders)
